--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       }
 const message = `سلام چطوری ${name}
 
-میدونم ${name} ط
+میدونم ${name} 
 و حتی میدونم ${age} سالته
-ولی ${name} جان باور کن این ذره‌ای برام اهمیت نداره
+ولی ${name} جان باور کن یه ذره‌ای برام اهمیت نداره
 تنها چیزی که برام مهمه اینه که بیای
 کافه ما یه چیزی سفارش بدی، ما
 فروشمون بیشتر شه، آخر ماه چک داریم
