--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ const message = `سلام چطوری ${name}
 نخواستیم خاک تو سرت، لیاقت نداری
 
 آیدی اینستاگرام:
-https://www.instagram.com/cofe_mondo?igsh=ZjQ1eDF1b2FtdGRl`;
+@cofe_mondo`;
 
       document.getElementById("result").innerText = message;
     }
